--- a/Run.ipynb
+++ b/Run.ipynb
@@ -17,7 +17,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!cd ZeldaRL_Ripo/Rom"
+        "%cd ZeldaRL_Ripo"
       ]
     },
     {
@@ -44,7 +44,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from Zelda_env import *\n",
+        "from Rom.Zelda_env import *\n",
         "from stable_baselines3.common.vec_env import VecFrameStack, VecMonitor, SubprocVecEnv, DummyVecEnv\n",
         "from stable_baselines3 import PPO\n",
         "from stable_baselines3.common.utils import set_random_seed\n",
