--- a/Run.ipynb
+++ b/Run.ipynb
@@ -65,7 +65,7 @@
         "    :param rank: (int) index of the subprocess\n",
         "    \"\"\"\n",
         "    def _init():\n",
-        "        env = ZeldaEnv(rank)\n",
+        "        env = ZeldaEnv(rank, save=False)\n",
         "        env.reset(seed=(seed + rank))\n",
         "        return env\n",
         "    set_random_seed(seed)\n",
