--- a/Run.ipynb
+++ b/Run.ipynb
@@ -35,7 +35,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip install -r requirements.txt"
+        "!pip install -r Rom/requirements.txt"
       ]
     },
     {
